Changelog

v3.0
* [major] updated to imdbphp-6.5 library
* [major] rewritten the code to be compliant with wordpress security
* [major] plugin is compatible with tablets/mobile phones
* [medium] updated to highslide 5.0
* [minor] removed Pilot search options
* [minor] removed js support for IE
* [minor] made click to expand "content security policy" compliant

v2.3.2
* [major] updated to imdbphp-2.3.2 library
* [medium] added Ukranian : thanks Michael Yunat
* [bug] fixed longstanding bug: shortcodes when editing a wordpress post are back
* [bug] fixed longstanding bug: bios are back

v2.2.3
* [major] updated to imdbphp-2.2.3 library

v2.2.2
* [major] updated to imdbphp-2.2.2 library
* [medium] added production companies

v2.2.1
* [major] updated to imdbphp-2.2.1 library
* [medium] added Croatian : thanks Borisa Djuraskovic!
* [bug] fixed newly added "keywords" bug in the taxonomy

v2.2
* [major] updated to imdbphp-2.2 library
* [medium] added "keywords" option which allows to diplay the movie keywords. Taxonomy included.
* [minor] "Display only thumbnail" option now affects popup picture width in the same way it affects widgets picture width
* [bug] deleted "ob_flush(); flush();" in inc/popup-header.php as it was preventing the CSS and JS to be used
* [bug] removed "movie connection" option in widget; this was a long non-working useless option

v2.1.9
* [major] updated to imdbphp-2.1.9 library

v2.1.8
* [major] updated to imdbphp-2.1.8 library

v2.1.7
* [major] updated to imdbphp-2.1.7 library
* [bug] soundtracks fixed
* [bug] movie connection is broken, unactivated

v2.1.6
* [major] updated to imdbphp-2.1.6 library

v2.1.5
* [major] updated to imdbphp-2.1.5 library

v2.1.4
* [major] updated to imdbphp-2.1.4 library
* [minor] changed obsolete __ngettext() method to _n() (__ngettext obsolete since wordpress 2.8)
* [minor] removed moviepilot options, but who was still using that?

v2.1.3
* [major] updated to imdbphp-2.1.3 library